--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -35,3 +35,5 @@
     <!-- Page wrapper  -->
     <!-- ============================================================== -->
 </div>
+<!-- MODAL UPLOAD -->
+<app-modal-upload> </app-modal-upload>
